<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_operation_description"
        android:hint="@string/create_operation_description"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_operation_date"
        android:hint="@string/create_operation_date"
        android:inputType="date" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_operation_settlement_date"
        android:hint="@string/create_operation_settlement_date"
        android:inputType="date" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_operation_instalments"
        android:hint="@string/create_operation_instalments"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_operation_amount"
        android:hint="@string/create_operation_amount"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operation_type"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/create_operation_type_radio_group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/costs_fragment_title"
            android:id="@+id/create_operation_type_costs_radioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earns_fragment_title"
            android:id="@+id/create_operation_type_earns_radioButton" />
    </RadioGroup>
</LinearLayout>